<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/bored"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="20dp"
        android:layout_marginRight="30dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:text="@string/text1"/>
       <LinearLayout
           android:layout_gravity="center_vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/text"
                   android:textSize="18sp"
                   android:layout_marginRight="20dp"
                   android:text="@string/text2"/>
               <Spinner
                   android:id="@+id/activity_type"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:spinnerMode="dropdown" />
           </LinearLayout>


           <EditText
               android:id="@+id/editTextNumber"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:hint="@string/text3"
               android:inputType="number"
               android:textColorHint="@color/text" />
           <Button
               android:id="@+id/submit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/text4"
               android:backgroundTint="@color/purple_700"
               android:layout_marginTop="10dp"
               android:layout_gravity="center_horizontal"/>

       </LinearLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>