<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/bored"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="20dp"
        android:layout_marginRight="30dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:layout_marginRight="20dp"
                android:text="@string/text5"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"

                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text6"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/acttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text7"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/typetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text9"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/poepletext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text10"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/accesstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:text="@string/text8"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/pricetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>


        </LinearLayout>







    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>